--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ArrowPanel</string>
+    <string name="app_name">com.mahdikh.vision.arrowpanel.widget.ArrowPanel</string>
 </resources>
